@startuml

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam class {
  BackgroundColor White
  BorderColor #475467
  ArrowColor #667085
}

entity "tenants\n(referentna tabela)" as tenants {
  * tenant_id : bigint <<PK>>
  --
  region : text <<not null>>
  tenant_tier : text <<not null>>
  tenant_status : text <<not null>>
  updated_at : timestamptz <<not null>>
  dimension_version : bigint <<not null>>
}

entity "events\n(distribuirana tabela)" as events {
  * tenant_id : bigint <<PK, distribucioni ključ>>
  * event_id : bigserial <<PK>>
  --
  user_id : bigint <<not null>>
  value : double precision <<not null>>
  created_at : timestamptz <<not null>>
  --
  idx_events_tenant_created_at
  (tenant_id, created_at)
}

entity "users\n(kolocirana distribuirana tabela)" as users {
  * tenant_id : bigint <<PK, distribucioni ključ>>
  * user_id : bigint <<PK>>
  --
  user_segment : text <<not null>>
  user_status : text <<not null>>
  signup_at : timestamptz <<not null>>
  updated_at : timestamptz <<not null>>
  --
  idx_users_tenant_segment
  (tenant_id, user_segment)
}

entity "global_users\n(nekolocirana stres tabela)" as global_users {
  * tenant_id : bigint <<PK>>
  * user_id : bigint <<PK, distribucioni ključ>>
  --
  user_segment : text <<not null>>
  user_status : text <<not null>>
  home_region : text <<not null>>
  signup_at : timestamptz <<not null>>
  updated_at : timestamptz <<not null>>
  --
  idx_global_users_user_tenant
  (user_id, tenant_id)
  idx_global_users_tenant_segment
  (tenant_id, user_segment)
}

tenants ||..o{ events : reference join\npo tenant_id
tenants ||..o{ users : vlasništvo tenanta\npo tenant_id
users ||..o{ events : kolocirani join\n(tenant_id, user_id)
global_users ||..o{ events : nekolocirani stres join\ndistribucija po user_id

note right of tenants
  Citus tip tabele:
  referentna tabela

  Kreiranje:
  create_reference_table('tenants')

  Namjena:
  mala tenant/dimenziona tabela
  replicirana na workere radi
  lokalnih join operacija.

  Upotreba u radu:
  tenant_tier/status promjene prave
  kontrolisane stale ETL scenarije.
end note

note right of events
  Citus tip tabele:
  distribuirana tabela

  Distribucioni ključ:
  tenant_id

  Kreiranje:
  create_distributed_table('events', 'tenant_id')

  Primarni ključ uključuje tenant_id zato
  što Citus zahtijeva da unique ograničenja
  nad distribuiranim tabelama uključuju
  distribucionu kolonu.
end note

note right of users
  Citus tip tabele:
  distribuirana tabela kolocirana sa events

  Kreiranje:
  create_distributed_table(
    'users',
    'tenant_id',
    colocate_with => 'events'
  )

  Namjena:
  pokazuje worker-local fact/dimension
  join unutar svakog regionalnog
  Citus klastera.
end note

note right of global_users
  Distribuirana po user_id, ne po tenant_id.
  Time namjerno prekida kolokaciju sa events
  tabelom i služi kao nekolocirani
  join stress/profiling slučaj.

  Upotreba u radu:
  konkretan Citus regional-shape sentinel
  za ponašanje nekolociranih join upita.
  Teške ANALYZE runove držati van
  osnovnog benchmarka osim kada su
  eksplicitno ograničeni.
end note

note bottom
  Implementirani izvor istine: sql/minimal_schema.sql

  Dijagram je logički. Prikazuje odnose namijenjene benchmarku čak i kada
  DDL ne definiše svaki odnos kao FOREIGN KEY.
end note

@enduml
